// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTokensWithFiltering should not return tokens that are not in the allowlist 1`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0.000000000000000014",
    "chainId": "0xe708",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.000000000000000014",
    "symbol": "ETH",
    "tokenFiatAmount": 3.53395e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0.00000000000000001",
    "chainId": "0x1",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.00000000000000001",
    "symbol": "ETH",
    "tokenFiatAmount": 2.5242500000000003e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "aggregators": [],
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "erc721": false,
    "iconUrl": "images/contract/sushi.svg",
    "image": "images/contract/sushi.svg",
    "name": "SushiSwap",
    "string": undefined,
    "symbol": "SUSHI",
    "type": "TOKEN",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0x0",
    "chainId": "0x1",
    "decimals": 18,
    "iconUrl": "./images/eth_logo.svg",
    "image": "./images/eth_logo.svg",
    "name": "Ether",
    "string": "0x0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "aggregators": [],
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/uni.svg",
    "image": "images/contract/uni.svg",
    "name": "Uniswap",
    "string": undefined,
    "symbol": "UNI",
    "type": "TOKEN",
  },
]
`;

exports[`useTokensWithFiltering should return all tokens when chainId === activeChainId, sorted by balance 1`] = `
[
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "0.00184",
    "chainId": "0x1",
    "decimals": 6,
    "image": undefined,
    "isNative": false,
    "string": "0.00184",
    "tokenFiatAmount": 0.004232,
    "type": "TOKEN",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0.000000000000000014",
    "chainId": "0xe708",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.000000000000000014",
    "symbol": "ETH",
    "tokenFiatAmount": 3.53395e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0.00000000000000001",
    "chainId": "0x1",
    "decimals": 18,
    "image": "./images/eth_logo.svg",
    "string": "0.00000000000000001",
    "symbol": "ETH",
    "tokenFiatAmount": 2.5242500000000003e-14,
    "type": "NATIVE",
  },
  {
    "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
    "balance": "1",
    "chainId": "0x1",
    "image": undefined,
    "isNative": false,
    "string": "1",
    "tokenFiatAmount": null,
    "type": "TOKEN",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "balance": "",
    "chainId": "0x1",
    "decimals": 6,
    "string": undefined,
    "type": "TOKEN",
  },
  {
    "address": "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2",
    "aggregators": [],
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "erc721": false,
    "iconUrl": "images/contract/sushi.svg",
    "image": "images/contract/sushi.svg",
    "name": "SushiSwap",
    "string": undefined,
    "symbol": "SUSHI",
    "type": "TOKEN",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0x0",
    "chainId": "0x1",
    "decimals": 18,
    "iconUrl": "./images/eth_logo.svg",
    "image": "./images/eth_logo.svg",
    "name": "Ether",
    "string": "0x0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
  {
    "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
    "aggregators": [],
    "balance": "",
    "chainId": "0x1",
    "decimals": 18,
    "erc20": true,
    "iconUrl": "images/contract/uni.svg",
    "image": "images/contract/uni.svg",
    "name": "Uniswap",
    "string": undefined,
    "symbol": "UNI",
    "type": "TOKEN",
  },
  {
    "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "aggregators": [],
    "balance": "",
    "chainId": "0x1",
    "decimals": 6,
    "erc20": true,
    "iconUrl": "images/contract/usdt.svg",
    "image": "images/contract/usdt.svg",
    "name": "Tether USD",
    "string": undefined,
    "symbol": "USDT",
    "type": "TOKEN",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "balance": "0x0",
    "chainId": "0x1",
    "decimals": 18,
    "iconUrl": "./images/eth_logo.svg",
    "image": "./images/eth_logo.svg",
    "name": "Ether",
    "string": "0x0",
    "symbol": "ETH",
    "type": "NATIVE",
  },
]
`;
